# LaxAI

./: .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  API_DOCUMENTATION.md  CHECKPOINT_IMPLEMENTATION_SUMMARY.md  CLOUD_GPU_TRAINING.md  DATAPREP_STORAGE_PERSISTENCE_VERIFICATION.md  Dockerfile  Dockerfile.deps  FILES_TO_UPDATE.md  GCS_VIDEO_CAPTURE_USAGE.md  GOOGLE_SECRET_MANAGER_INTEGRATION.md  GRASS_MASK_CONFIG_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LaxAI-multiservice.code-workspace  MIGRATION_GUIDE.md  PIPELINE_STEP_REFACTORING.md  README.md  REFACTORING_SUMMARY.md  SERVICES_README.md  TEST_README.md  TEST_REORGANIZATION_PLAN.md  TRACK_STITCHING_CONFIG.md  TRACK_STITCHING_DETECTION_UPDATES.md  TRACK_STITCHING_IMPLEMENTATION.md  TRACK_STITCHING_METADATA_UPDATES.md  TRANSFORMS_IMPLEMENTATION.md  WANDB_EPOCH_CONSTRAINTS.md  WANDB_TEST_IMPROVEMENTS.md  WANDB_TEST_OPTIMIZATION.md  api_endpoints.json  application copy.py  application.py  checkpoint_demo.graphml  cleanup_root.sh  cleanup_wandb_collections.py  cloud-config.env  cloudbuild copy.yaml bal  (+94 more)
.31211/: pyvenv.cfg
analyse/: analyse.py
config/: __init__.py  all_config.py  constants.py  logging_config.py  store_config.py  transforms.py  transforms_config.py
deploy/: docker-compose.yml
docs/: MULTI_SERVICE_GUIDE.md
documentation/: .env.example  API_ROUTING_GUIDE.md  BACKGROUND_REMOVAL_TRANSFORMS.md  CENTRALIZED_BACKGROUND_REMOVAL.md  CHECKPOINT_RESUME_SYSTEM.md  CLASSIFICATION_HEAD_FEATURE.md  DATAPREP_AND_TRAIN_ARCHITECTURE.md  DATAPREP_PIPELINE_OPTIMIZATION.md  DATA_STORAGE.md  (+6 more)
(+646 files in other folders)
